--- a/SwampAttack/Resources/image/skullking4.plist
+++ b/SwampAttack/Resources/image/skullking4.plist
@@ -4,211 +4,185 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>skullking_hurt_on0001.png</key>
+            <key>skullking_Electric0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{226,2},{186,260}}</string>
+                <string>{{214,2},{202,242}}</string>
                 <key>offset</key>
-                <string>{14,-25}</string>
+                <string>{22,-10}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{111,70},{186,260}}</string>
+                <string>{{111,64},{202,242}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_hurt_on0002.png</key>
+            <key>skullking_Electric0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{824,278},{190,272}}</string>
+                <string>{{2,818},{202,242}}</string>
                 <key>offset</key>
-                <string>{13,-19}</string>
+                <string>{22,-10}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{111,64},{202,242}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_hurt_heavy0004.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,548},{186,268}}</string>
+                <key>offset</key>
+                <string>{11,-21}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{108,58},{190,272}}</string>
+                <string>{{108,62},{186,268}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_walk0001.png</key>
+            <key>skullking_hurt_heavy0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{220,560},{214,272}}</string>
+                <string>{{2,2},{210,274}}</string>
                 <key>offset</key>
-                <string>{10,-22}</string>
+                <string>{3,-18}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{93,61},{214,272}}</string>
+                <string>{{88,56},{210,274}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_walk0002.png</key>
+            <key>skullking_hurt_heavy0006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{224,280},{214,270}}</string>
+                <string>{{504,808},{210,258}}</string>
                 <key>offset</key>
-                <string>{5,-23}</string>
+                <string>{3,-26}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{88,63},{214,270}}</string>
+                <string>{{88,72},{210,258}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_walk0003.png</key>
+            <key>skullking_hurt_heavy0007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{436,552},{214,268}}</string>
+                <string>{{764,696},{228,248}}</string>
                 <key>offset</key>
-                <string>{1,-24}</string>
+                <string>{-6,-31}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{84,65},{214,268}}</string>
+                <string>{{70,82},{228,248}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_walk0004.png</key>
+            <key>skullking_hurt_heavy0008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{440,2},{184,272}}</string>
+                <string>{{764,444},{250,252}}</string>
+                <key>offset</key>
+                <string>{-17,-29}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{48,78},{250,252}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_hurt_heavy0009.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{764,2},{230,258}}</string>
+                <key>offset</key>
+                <string>{-15,-26}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{60,72},{230,258}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_hurt_light0003.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{190,548},{176,266}}</string>
                 <key>offset</key>
                 <string>{12,-22}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{110,61},{184,272}}</string>
+                <string>{{114,64},{176,266}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_walk0005.png</key>
+            <key>skullking_hurt_light0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{652,2},{170,278}}</string>
+                <string>{{190,278},{182,268}}</string>
                 <key>offset</key>
-                <string>{14,-19}</string>
+                <string>{10,-21}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{119,55},{170,278}}</string>
+                <string>{{109,62},{182,268}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_walk0006.png</key>
+            <key>skullking_hurt_light0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,836},{184,276}}</string>
+                <string>{{2,278},{186,268}}</string>
                 <key>offset</key>
-                <string>{18,-20}</string>
+                <string>{3,-21}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{100,62},{186,268}}</string>
+                <key>sourceSize</key>
+                <string>{380,350}</string>
+            </dict>
+            <key>skullking_hurt_on0003.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{764,234},{208,256}}</string>
+                <key>offset</key>
+                <string>{8,-27}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{116,57},{184,276}}</string>
+                <string>{{94,74},{208,256}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_walk0007.png</key>
+            <key>skullking_hurt_on0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{826,2},{196,274}}</string>
+                <string>{{368,548},{234,258}}</string>
                 <key>offset</key>
-                <string>{22,-21}</string>
+                <string>{-13,-26}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{114,59},{196,274}}</string>
+                <string>{{60,72},{234,258}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
-            <key>skullking_walk0008.png</key>
+            <key>skullking_hurt_on0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{440,282},{210,272}}</string>
+                <string>{{246,816},{206,256}}</string>
                 <key>offset</key>
-                <string>{26,-22}</string>
+                <string>{-2,-27}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{111,61},{210,272}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_walk0009.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{554,822},{200,270}}</string>
-                <key>offset</key>
-                <string>{26,-23}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{116,63},{200,270}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_walk0010.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{826,552},{192,268}}</string>
-                <key>offset</key>
-                <string>{25,-24}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{119,65},{192,268}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_walk0011.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{280,834},{186,272}}</string>
-                <key>offset</key>
-                <string>{23,-22}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{120,61},{186,272}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_walk0012.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,280},{220,278}}</string>
-                <key>offset</key>
-                <string>{2,-19}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{82,55},{220,278}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_walk0013.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,2},{222,276}}</string>
-                <key>offset</key>
-                <string>{0,-20}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{79,57},{222,276}}</string>
-                <key>sourceSize</key>
-                <string>{380,350}</string>
-            </dict>
-            <key>skullking_walk0014.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,560},{216,274}}</string>
-                <key>offset</key>
-                <string>{2,-21}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{84,59},{216,274}}</string>
+                <string>{{85,74},{206,256}}</string>
                 <key>sourceSize</key>
                 <string>{380,350}</string>
             </dict>
@@ -218,13 +192,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>skullking3.png</string>
+            <string>skullking4.png</string>
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:0611c2554607c72371e6efd4c778afc0:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:df11d636c1cf7ab0ac8548e33c59cbeb:1/1$</string>
             <key>textureFileName</key>
-            <string>skullking3.png</string>
+            <string>skullking4.png</string>
         </dict>
     </dict>
 </plist>
