--- a/SwampAttack/Resources/image/wolfking2.plist
+++ b/SwampAttack/Resources/image/wolfking2.plist
@@ -7,117 +7,117 @@
             <key>wolfking_down0013.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{328,234}}</string>
+                <string>{{2,320},{436,248}}</string>
                 <key>offset</key>
-                <string>{23,-104}</string>
+                <string>{17,-111}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{94,222},{328,234}}</string>
+                <string>{{34,222},{436,248}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_light0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,238},{268,296}}</string>
+                <string>{{306,2},{276,338}}</string>
                 <key>offset</key>
-                <string>{22,-32}</string>
+                <string>{27,-53}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{123,119},{268,296}}</string>
+                <string>{{124,119},{276,338}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_light0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{332,2},{268,296}}</string>
+                <string>{{440,280},{268,338}}</string>
                 <key>offset</key>
-                <string>{27,-32}</string>
+                <string>{27,-53}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
-                <string>{{128,119},{268,296}}</string>
+                <string>{{128,119},{268,338}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_light0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{300,272},{272,288}}</string>
+                <string>{{646,2},{272,330}}</string>
                 <key>offset</key>
-                <string>{29,-36}</string>
+                <string>{29,-57}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{128,127},{272,288}}</string>
+                <string>{{128,127},{272,330}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_light0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{630,256},{272,292}}</string>
+                <string>{{302,620},{278,328}}</string>
                 <key>offset</key>
-                <string>{31,-40}</string>
+                <string>{28,-58}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{130,129},{272,292}}</string>
+                <string>{{124,129},{278,328}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_light0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{590,530},{272,284}}</string>
+                <string>{{710,276},{280,326}}</string>
                 <key>offset</key>
-                <string>{22,-38}</string>
+                <string>{26,-59}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
-                <string>{{121,131},{272,284}}</string>
+                <string>{{121,131},{280,326}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_on0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,508},{286,274}}</string>
+                <string>{{2,2},{302,316}}</string>
                 <key>offset</key>
-                <string>{49,-46}</string>
+                <string>{41,-68}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{141,144},{286,274}}</string>
+                <string>{{125,145},{302,316}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_on0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{290,546},{270,280}}</string>
+                <string>{{632,620},{290,322}}</string>
                 <key>offset</key>
-                <string>{40,-44}</string>
+                <string>{30,-65}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
-                <string>{{140,139},{270,280}}</string>
+                <string>{{120,139},{290,322}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_on0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{630,2},{252,294}}</string>
+                <string>{{2,570},{298,330}}</string>
                 <key>offset</key>
-                <string>{33,-44}</string>
+                <string>{28,-61}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
-                <string>{{142,132},{252,294}}</string>
+                <string>{{114,131},{298,330}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
@@ -131,7 +131,7 @@
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:52258e65b57c1123834434ca44972fbf:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:6af2d2e730e5d1a161e8730f0837ec0d:1/1$</string>
             <key>textureFileName</key>
             <string>wolfking2.png</string>
         </dict>
