--- a/SwampAttack/Resources/image/wolfking6.plist
+++ b/SwampAttack/Resources/image/wolfking6.plist
@@ -7,117 +7,117 @@
             <key>wolfking_hurt_heavy0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{290,2},{278,296}}</string>
+                <string>{{2,336},{282,338}}</string>
                 <key>offset</key>
-                <string>{27,-32}</string>
+                <string>{30,-53}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{123,119},{278,296}}</string>
+                <string>{{124,119},{282,338}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_heavy0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,304},{290,296}}</string>
+                <string>{{350,328},{294,338}}</string>
                 <key>offset</key>
-                <string>{38,-32}</string>
+                <string>{36,-53}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{128,119},{290,296}}</string>
+                <string>{{124,119},{294,338}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_heavy0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{294,300},{290,288}}</string>
+                <string>{{336,624},{304,330}}</string>
                 <key>offset</key>
-                <string>{43,-36}</string>
+                <string>{36,-57}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{133,127},{290,288}}</string>
+                <string>{{119,127},{304,330}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_heavy0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{274,602},{290,290}}</string>
+                <string>{{2,620},{314,332}}</string>
                 <key>offset</key>
-                <string>{48,-35}</string>
+                <string>{35,-56}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{138,125},{290,290}}</string>
+                <string>{{113,125},{314,332}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_heavy0005.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{286,300}}</string>
+                <string>{{350,2},{324,342}}</string>
                 <key>offset</key>
-                <string>{53,-30}</string>
+                <string>{34,-51}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{145,115},{286,300}}</string>
+                <string>{{107,115},{324,342}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_heavy0006.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{566,592},{272,286}}</string>
+                <string>{{668,658},{318,328}}</string>
                 <key>offset</key>
-                <string>{31,-37}</string>
+                <string>{25,-58}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{130,129},{272,286}}</string>
+                <string>{{101,129},{318,328}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_heavy0007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{584,294},{268,286}}</string>
+                <string>{{694,2},{328,328}}</string>
                 <key>offset</key>
-                <string>{3,-38}</string>
+                <string>{20,-58}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{104,130},{268,286}}</string>
+                <string>{{91,129},{328,328}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_heavy0008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,602},{270,296}}</string>
+                <string>{{2,2},{346,332}}</string>
                 <key>offset</key>
-                <string>{-28,-37}</string>
+                <string>{11,-56}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{72,124},{270,296}}</string>
+                <string>{{73,125},{346,332}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
             <key>wolfking_hurt_heavy0009.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{570,2},{274,290}}</string>
+                <string>{{690,332},{324,332}}</string>
                 <key>offset</key>
-                <string>{-9,-35}</string>
+                <string>{15,-56}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{89,125},{274,290}}</string>
+                <string>{{88,125},{324,332}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
@@ -131,7 +131,7 @@
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:c42aec18ff08bc23dca7cec08736710d:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:f57c67e74db804e7ceb03e08a75c9c8f:1/1$</string>
             <key>textureFileName</key>
             <string>wolfking6.png</string>
         </dict>
