--- a/SwampAttack/Resources/image/wolfking8.plist
+++ b/SwampAttack/Resources/image/wolfking8.plist
@@ -4,68 +4,55 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>wolfking_attack0001.png</key>
+            <key>wolfking_down0010.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{672,2},{328,340}}</string>
+                <string>{{252,516},{390,258}}</string>
                 <key>offset</key>
-                <string>{11,-58}</string>
+                <string>{25,-106}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{82,123},{328,340}}</string>
+                <string>{{65,212},{390,258}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_attack0002.png</key>
+            <key>wolfking_down0011.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{672,332},{316,402}}</string>
+                <string>{{2,2},{436,256}}</string>
                 <key>offset</key>
-                <string>{31,-27}</string>
+                <string>{17,-107}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{108,61},{316,402}}</string>
+                <string>{{34,214},{436,256}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_attack0003.png</key>
+            <key>wolfking_down0012.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,468},{342,460}}</string>
+                <string>{{2,260},{436,254}}</string>
                 <key>offset</key>
-                <string>{37,2}</string>
+                <string>{17,-108}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{101,3},{342,460}}</string>
+                <string>{{34,216},{436,254}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
-            <key>wolfking_attack0004.png</key>
+            <key>wolfking_down0013.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{346,468},{324,450}}</string>
+                <string>{{2,516},{436,248}}</string>
                 <key>offset</key>
-                <string>{27,-3}</string>
+                <string>{17,-111}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{100,13},{324,450}}</string>
-                <key>sourceSize</key>
-                <string>{470,470}</string>
-            </dict>
-            <key>wolfking_attack0005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,2},{414,464}}</string>
-                <key>offset</key>
-                <string>{-18,3}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{10,0},{414,464}}</string>
+                <string>{{34,222},{436,248}}</string>
                 <key>sourceSize</key>
                 <string>{470,470}</string>
             </dict>
@@ -75,13 +62,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>wolfking5.png</string>
+            <string>wolfking8.png</string>
             <key>size</key>
-            <string>{1024,1024}</string>
+            <string>{512,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:228c576ac8010fd8c2c66acf85631c28:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:43f7939a29ff7a192c428818215151c9:1/1$</string>
             <key>textureFileName</key>
-            <string>wolfking5.png</string>
+            <string>wolfking8.png</string>
         </dict>
     </dict>
 </plist>
