--- a/SwampAttack/proj.android/project.properties
+++ b/SwampAttack/proj.android/project.properties
@@ -10,3 +10,4 @@
 # Project target.
 target=android-20
 
+android.library.reference.1=../../../../../Downloads/UC九游单机SDK_1.3.0_3.3/03-客户端开发包/ugpsdk-integration
